--- a/index.html
+++ b/index.html
@@ -72,7 +72,45 @@
     </nav> 
  
 <img id="logo" class="img-responsive img-rounded" src="Logo Cosmiic Greens.png">
+<br>
+<br>
 
+<div id="mycarousel" class="carousel slide">
+    <div class="carousel-inner">
+        <div class="item active">
+            <center>
+                <img src="4.jpeg" class="img-responsive">
+                <div class="carousel-content">
+                    <p>Mesh Net bags</p>
+                </div>
+            </center>
+        </div>
+        <div class="item">
+            <center>
+                <img src="8.jpeg" class="img-responsive">
+                <div class="carousel-content">
+                    <p>Laundry Bags</p>
+                </div>
+            </center>
+        </div>
+        <div class="item">
+            <center>
+                <img src="9.jpeg" class="img-responsive">
+                <div class="carousel-content">
+                    <p>Bamboo toothbrush</p>
+                </div>
+            </center>
+        </div>
+
+    </div>
+<a class="left carousel-control" href="#mycarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+</a>
+<a class="right carousel-control" href="#mycarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+</a>
+
+</div>
 
 <section id="aboutus">
 <h2>About Us</h2>
