--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Cosmiic Greens</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Sacramento&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
@@ -13,11 +13,8 @@
     <body>
 
     <div class="container">
-  <!--  <div class="header">
-        <img src="Logo Cosmiic Greens.png">
-        <p>Cosmiic Greens</p>
-    </div> 
--->
+
+
     <nav class="navbar-inverse navbar-fixed-top my_navbar">
        <div class="navbar-header">
            <a href="#">
@@ -71,7 +68,12 @@
        </div>
     </nav> 
  
-<img id="logo" class="img-responsive img-rounded" src="Logo Cosmiic Greens.png">
+
+<div id="header">
+    <img id="logo" class="img-responsive img-rounded" src="Logo Cosmiic Greens.png">
+    <span><p>Cosmiic Greens</p></span>
+</div>
+
 <br>
 <br>
 
@@ -182,6 +184,13 @@
     <!--map -->
     <h2>Contact Us</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.500291591003!2d77.17455231508283!3d28.64473523241304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d029593d2033f%3A0x78652d910b32bf4f!2sShiksha%20Overseas!5e0!3m2!1sen!2sin!4v1621016120628!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <span class="col-md-6 col-sm-6 col-xs-12 col-lg-6" id="address">
+        <p>Cosmiic Greens</p>
+        <p>Address:</p>
+        <p>25/33, Govind Lal Sikka Mark</p>
+        <p>East Patel Nagar</p>
+        <p>New Delhi - 110008</p>
+    </span>
 
 
 <div class ="contact1">
