--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cosmiic Greens</title>
+        <title>Cosmiic Greens - Ecofriendly Products</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Sacramento&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
@@ -81,35 +81,51 @@
     <div class="carousel-inner">
         <div class="item active">
             <center>
-                <img src="4.jpeg" class="img-responsive">
+                <img src="abc.jpg" class="img-responsive">
                 <div class="carousel-content">
-                    <p>Mesh Net bags</p>
+                    <p>Ecofriendly living</p>
                 </div>
             </center>
         </div>
         <div class="item">
             <center>
-                <img src="8.jpeg" class="img-responsive">
+                <img src="pexels-andrea-piacquadio-2672790.jpg" class="img-responsive">
                 <div class="carousel-content">
-                    <p>Laundry Bags</p>
+                    <p>Sustainability</p>
                 </div>
             </center>
         </div>
         <div class="item">
             <center>
-                <img src="9.jpeg" class="img-responsive">
+                <img src="pexels-ketut-subiyanto-4307929.jpg" class="img-responsive">
                 <div class="carousel-content">
-                    <p>Bamboo toothbrush</p>
+                    <p>Smiling Future</p>
+                </div>
+            </center>
+        </div>
+        <div class="item">
+            <center>
+                <img src="pexels-mentatdgt-1206059.jpg" class="img-responsive">
+                <div class="carousel-content">
+                    <p>Happy Living</p>
+                </div>
+            </center>
+        </div>
+        <div class="item">
+            <center>
+                <img src="pexels-pixabay-390051.jpg" class="img-responsive">
+                <div class="carousel-content">
+                    <p>Environment Preservation</p>
                 </div>
             </center>
         </div>
 
     </div>
 <a class="left carousel-control" href="#mycarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+   
 </a>
 <a class="right carousel-control" href="#mycarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+   
 </a>
 
 </div>
@@ -136,11 +152,13 @@
 <br>
 <section id="shop">
     <h2>Shop</h2>
-    <section id="mnb"> <h4>Reusable Mesh Net Bags</h4> 
-   
-    <p>Our award winning Reusable Produce Bags are an easy alternative for single use plastic fruit and vegetable bags when shopping.
-    Crafted from special rPet fabric, our produce bags are made from recycled plastic drink bottles.
-    With many people trying to attain a closer to zero waste lifestyle, our produce bags allow you to do your weekly shop without the need for single use plastic.</p>
+    <section id="mnb"> <h4>Reusable Mesh Net Bags</h4>
+    <span>
+        <img src="4.jpeg" class="img-responsive img-rounded col-lg-6 col-md-6 col-xs-12 col-sm-8">
+        <p class="col-lg-6 col-md-6 col-xs-12 col-sm-8">Our award winning Reusable Produce Bags are an easy alternative for single use plastic fruit and vegetable bags when shopping.
+            Crafted from special rPet fabric, our produce bags are made from recycled plastic drink bottles.
+            With many people trying to attain a closer to zero waste lifestyle, our produce bags allow you to do your weekly shop without the need for single use plastic.</p>
+    </span>
 </section>
 <section id="laundry"><h4>Laundry Bags</h4>
     <p>Our very light but deceptively strong mesh bags can hold up to 2 kilos/4.4 pounds of produce and feature a gussett and drawsting tie.
@@ -183,15 +201,7 @@
 <section id="contact">
     <!--map -->
     <h2>Contact Us</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.500291591003!2d77.17455231508283!3d28.64473523241304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d029593d2033f%3A0x78652d910b32bf4f!2sShiksha%20Overseas!5e0!3m2!1sen!2sin!4v1621016120628!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <span class="col-md-6 col-sm-6 col-xs-12 col-lg-6" id="address">
-        <p>Cosmiic Greens</p>
-        <p>Address:</p>
-        <p>25/33, Govind Lal Sikka Mark</p>
-        <p>East Patel Nagar</p>
-        <p>New Delhi - 110008</p>
-    </span>
-
+    
 
 <div class ="contact1">
     <!--social media links-->
@@ -199,7 +209,7 @@
         <i class="fa fa-envelope"></i>&nbsp;<p>admin@cosmiicgreens.com</p>
     </a>
     &nbsp;&nbsp;
-    <a href="" target="_blank">
+    <a href="https://instagram.com/cosmiicgreens?igshid=j7astkmu4adi" target="_blank">
         <i class="fa fa-instagram" ></i>&nbsp;<p>@cosmiicgreens</p>
     </a>
     &nbsp;&nbsp;
